fix: prevent scrollbar on viewport

--- a/src/index.less
+++ b/src/index.less
@@ -23,6 +23,7 @@ body,
   padding: 0;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 .ant-notification-notice {
